@@ -1,40 +1,0 @@
-/* shop.module.css */
-
-.itemContainer {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    justify-content: center;
-    gap: 20px; /* gap for consistent spacing */
-}
-
-.itemSingle {
-    height: 350px; 
-    width: 250px;
-    display: flex;
-    flex-direction: column;
-    padding: 15px;
-    box-sizing: border-box; /* include padding in width/height calculations */
-}
-
-.itemImage {
-    display: block;
-    margin: 0 auto;
-    height: 150px; 
-    width: 150px; 
-    object-fit: contain; /* prevent image distortion */
-    flex-shrink: 0; /* prevent image from shrinking */
-}
-
-.itemName {
-    text-align: center;
-    margin: 10px 0;
-    min-height: 80px; 
-    line-height: 1.3; /* tighter line spacing */
-    font-size: 16px; 
-}
-
-.itemPrice {
-    text-align: center;
-    margin: 5px 0;
-}
